@@ -1,5 +1,10 @@
 2007-10-24  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (add_seen_bssid): don't segfault when the AP's bssid isn't valid
+
+2007-10-24  Dan Williams  <dcbw@redhat.com>
+
 	* src/menu-items.h
 	  src/menu-items.c
 		- (nm_network_menu_item_set_ssid): use nm_utils_ssid_to_utf8()
